--- a/DoubleDoubleDistribution/DoubleDoubleDistribution.csproj
+++ b/DoubleDoubleDistribution/DoubleDoubleDistribution.csproj
@@ -4,11 +4,24 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Deterministic>false</Deterministic>
+    <Version>1.0.0</Version>
+    <Title>DoubleDouble.Distribution</Title>
+    <Authors>T.Yoshimura</Authors>
+    <Company>T.Yoshimura</Company>
+    <Description>Double-Double Continuous Distribution Implements</Description>
+    <Copyright>Copyright © T.Yoshimura 2023</Copyright>
+    <Product>DoubleDouble.Distribution</Product>
+    <AssemblyVersion>$(Version).*</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="TYoshimura.DoubleDouble" Version="2.9.7" />
     <PackageReference Include="TYoshimura.DoubleDouble.Complex" Version="1.3.4" />
   </ItemGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
 
 </Project>
