--- a/DoubleDoubleDistribution/DoubleDoubleDistribution.csproj
+++ b/DoubleDoubleDistribution/DoubleDoubleDistribution.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="TYoshimura.DoubleDouble" Version="2.9.7" />
     <PackageReference Include="TYoshimura.DoubleDouble.Complex" Version="1.3.4" />
+    <PackageReference Include="TYoshimura.DoubleDouble.Integrate" Version="1.3.1" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
