--- a/DoubleDoubleDistributionTests/DoubleDoubleDistributionTests.csproj
+++ b/DoubleDoubleDistributionTests/DoubleDoubleDistributionTests.csproj
@@ -16,11 +16,12 @@
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
     <PackageReference Include="TYoshimura.DoubleDouble" Version="2.9.7" />
     <PackageReference Include="TYoshimura.DoubleDouble.Complex" Version="1.3.4" />
+    <PackageReference Include="TYoshimura.DoubleDouble.Integrate" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="DoubleDoubleDistribution">
-      <HintPath>..\DoubleDoubleDistribution\bin\Release\net7.0\DoubleDoubleDistribution.dll</HintPath>
+      <HintPath>..\DoubleDoubleDistribution\bin\Debug\net7.0\DoubleDoubleDistribution.dll</HintPath>
     </Reference>
   </ItemGroup>
 
