--- a/DoubleDoubleDistributionTest/DoubleDoubleDistributionTest.csproj
+++ b/DoubleDoubleDistributionTest/DoubleDoubleDistributionTest.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="TYoshimura.DoubleDouble" Version="2.9.7" />
     <PackageReference Include="TYoshimura.DoubleDouble.Complex" Version="1.3.7" />
     <PackageReference Include="TYoshimura.DoubleDouble.Integrate" Version="1.3.1" />
+    <PackageReference Include="TYoshimura.DoubleDouble.RootFinding" Version="1.2.1" />
   </ItemGroup>
 
   <ItemGroup>
