fix: quantile fitter

--- a/DoubleDoubleStatistic/DoubleDoubleStatistic.csproj
+++ b/DoubleDoubleStatistic/DoubleDoubleStatistic.csproj
@@ -5,6 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Deterministic>false</Deterministic>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
