--- a/DoubleDoubleStatisticTest/DoubleDoubleStatisticTest.csproj
+++ b/DoubleDoubleStatisticTest/DoubleDoubleStatisticTest.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="TYoshimura.Algebra" Version="2.1.2" />
     <PackageReference Include="TYoshimura.DoubleDouble" Version="3.2.2" />
     <PackageReference Include="TYoshimura.DoubleDouble.Complex" Version="1.4.0" />
   </ItemGroup>
