--- a/DoubleDoubleStatisticTest/DoubleDoubleStatisticTest.csproj
+++ b/DoubleDoubleStatisticTest/DoubleDoubleStatisticTest.csproj
@@ -11,15 +11,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.6.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.6.2" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.12.6" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="1.4.3" />
+    <PackageReference Include="MSTest" Version="3.6.3" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.6.3" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.6.3" />
     <PackageReference Include="coverlet.collector" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="TYoshimura.Algebra" Version="2.3.0" />
-    <PackageReference Include="TYoshimura.DoubleDouble" Version="4.0.0" />
-    <PackageReference Include="TYoshimura.DoubleDouble.Complex" Version="1.6.0" />
+    <PackageReference Include="TYoshimura.Algebra" Version="2.3.2" />
+    <PackageReference Include="TYoshimura.DoubleDouble" Version="4.2.0" />
+    <PackageReference Include="TYoshimura.DoubleDouble.Complex" Version="1.6.3" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)'=='Debug'">
